--- a/index4.html
+++ b/index4.html
@@ -35,3 +35,17 @@
     </main>
 </body>
 </html>
+
+A portok a hálózati kommunikációban kulcsfontosságú szerepet játszanak. A portok virtuális pontok egy operációs rendszeren belül, ahol a hálózati kapcsolatok kezdődnek és véget érnek1.
+
+Portszámok fogalma:
+
+A portszámokat a hálózatra csatlakoztatott összes eszköz szabványosítja, és minden portot egy számmal azonosítanak1.
+A portszámok lehetővé teszik a specifikus szolgáltatások vagy alkalmazások célzását az adott eszközökön belül1.
+A portszámok mindig egy hálózati címhez, például egy IP-címhez, és a kommunikációhoz használt szállítási protokollhoz kapcsolódnak2.
+Portszámok szerepe:
+
+A portok segítenek a számítógépeknek könnyen megkülönböztetni a különböző típusú forgalmat: például az e-mailek más portra mennek, mint a weboldalak, annak ellenére, hogy mindkettő ugyanazon az internetkapcsolaton érkezik meg a számítógéphez1.
+A portok használata segít a számítógépeknek megérteni, mit kell tenniük a kapott adatokkal1.
+A portok a hálózati réteg (layer 4) fogalma az OSI modellben1.
+A portokat a szállítási protokollok, mint például a Transmission Control Protocol (TCP) vagy a User Datagram Protocol (UDP), jelzik, hogy melyik portra kell mennie egy csomagnak1.
