--- a/index10.html
+++ b/index10.html
@@ -29,7 +29,21 @@
     <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
         <div>
             <h2 class="text-2xl mb-4">Sorszámozás szerepe.</h2>
-            <p></p>
+            <p>A sorszámozás, más néven szekvenciaszám, kulcsfontosságú szerepet játszik a hálózati kommunikációban, különösen a TCP/IP protokollban.</p>
+
+            <p class="mb-2 mt-4 text-lg font-bold">Íme néhány kulcsfontosságú szerepe:</p>
+
+            <ul class="list-disc list-outside ml-5">
+                <li class="mb-2"><b>Adatok rendezése:</b> A sorszámozás segít a fogadónak a beérkező adatcsomagok helyes sorrendjének meghatározásában.</li>
+
+                <li class="mb-2"><b>Hiányzó vagy késő csomagok azonosítása:</b> Ha egy csomag hiányzik vagy késik, a fogadó azonosíthatja ezt a problémát a sorszámok alapján.</li>
+
+                <li class="mb-2"><b>Duplikált csomagok azonosítása:</b> Ha egy csomag többször érkezik meg, a fogadó azonosíthatja ezt a problémát a sorszámok alapján.</li>
+
+                <li class="mb-2"><b>Adatfolyam-vezérlés:</b> A sorszámozás segít szabályozni az adatfolyamot a küldő és a fogadó között, megakadályozva az adattúlterhelést.</li>
+            </ul>
+
+            <p class="mt-4">A sorszámozás tehát létfontosságú a hálózati kommunikációban, mivel segít a hálózati erőforrások hatékony kezelésében és a hálózati teljesítmény optimalizálásában.</p>
 
         </div>
     </main>
