--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
             <p class="mb-3">A szállítási réteg, az OSI modell 4. rétege, számos fontos funkciót lát el, amelyek a megbízható, hatékony és szervezett adatátvitelt teszik lehetővé a hálózatban lévő rendszerek között.
             </p>
 
-            <p class="mb-2">Íme néhány kulcsfontosságú feladata és szerepe:</p>
+            <p class="mb-2 font-bold text-lg">Íme néhány kulcsfontosságú feladata és szerepe:</p>
 
             <ul class="list-decimal list-outside ml-5">
                 <li class="mb-2"><b>Szegmensek létrehozása:</b> A szállítási réteg a felsőbb rétegektől kapott adatokat kisebb egységekre, úgynevezett szegmensekre bontja, hogy hatékony hálózati átvitel valósuljon meg.</li>
