--- a/index6.html
+++ b/index6.html
@@ -29,9 +29,54 @@
     <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
         <div>
             <h2 class="text-2xl mb-4">TCP Vs UDP Összehasonlítás.</h2>
-            <p></p>
 
+            <p class="mb-4">A TCP (Transmission Control Protocol) és az UDP (User Datagram Protocol) két kulcsfontosságú protokoll, amelyek az internetes kommunikációban játszanak szerepet. Mindkettő az OSI modell szállítási rétegében található, de különböző módon működnek és különböző alkalmazásokra használhatók.</p>
+
+            <p class="mb-2 font-bold text-lg">TCP (Transmission Control Protocol):</p>
+
+            <ul class="list-disc list-outside ml-5">
+                <li class="mb-2"><b>Kapcsolat-orientált:</b> A TCP kapcsolatot hoz létre a két kommunikáló eszköz között, mielőtt az adatokat elküldené.</li>
+
+                <li class="mb-2"><b>Megbízható:</b> A TCP garantálja, hogy az összes adat, amit az egyik eszköz küld, teljesen érintetlenül érkezik meg a másik eszközön.</li>
+
+                <li class="mb-2"><b>Adatátvitel szabályozása:</b> A TCP szabályozza az adatátvitelt, hogy megakadályozza az adattúlterhelést.</li>
+
+                <li class="mb-2"><b>Sebesség:</b> A TCP lassabb, mint az UDP, mivel több feldolgozást igényel a hálózati interfész szintjén.</li>
+
+                <li class="mb-2"><b>Fejrész mérete:</b> A TCP fejrész mérete 20 bájt.</li>
+            </ul>
+
+            <p class="mb-2 mt-4 font-bold text-lg">UDP (User Datagram Protocol):</p>
+
+            <ul class="list-disc list-outside ml-5">
+                <li class="mb-2"><b>Kapcsolat nélküli:</b> Az UDP nem hoz létre kapcsolatot a kommunikáló eszközök között.</li>
+
+                <li class="mb-2"><b>Kevesebb megbízhatóság:</b> Az UDP nem garantálja, hogy az elküldött üzenetek vagy csomagok megérkeznek.</li>
+
+                <li class="mb-2"><b>Adatátvitel szabályozása:</b>Adatátvitel szabályozása: Az UDP nem szabályozza az adatátvitelt, ezért gyorsabb, mint a TCP.</li>
+
+                <li class="mb-2"><b>Sebesség:</b> Az UDP gyorsabb, mint a TCP, mivel nem igényel hibaellenőrzést és javítást.</li>
+                
+                <li class="mb-2"><b>Fejrész mérete:</b> Az UDP fejrész mérete 8 bájt.</li>
+            </ul>
         </div>
     </main>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
