--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <ul class="flex space-x-4">
                 <a href="index.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 1</li></a>
                 <a href="index2.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 2</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 3</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 4</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 5</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 6</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 7</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 8</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 9</li></a>
-                <a href=""><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 10</li></a>
+                <a href="index3.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 3</li></a>
+                <a href="index4.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 4</li></a>
+                <a href="index5.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 5</li></a>
+                <a href="index6.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 6</li></a>
+                <a href="index7.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 7</li></a>
+                <a href="index8.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 8</li></a>
+                <a href="index9.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 9</li></a>
+                <a href="index10.html"><li class="bg-blue-800 p-2 rounded-md hover:bg-blue-500">Page 10</li></a>
             </ul>
         </nav>
     </header>
