--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
+    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">Szállítási réteg feladatai, szerepe.</h2>
             <p class="mb-3">A szállítási réteg, az OSI modell 4. rétege, számos fontos funkciót lát el, amelyek a megbízható, hatékony és szervezett adatátvitelt teszik lehetővé a hálózatban lévő rendszerek között.
