--- a/index4.html
+++ b/index4.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
+    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">Port számok szerepe és fogalmai.</h2>
             <p class="mb-3">A portok a hálózati kommunikációban kulcsfontosságú szerepet játszanak. A portok virtuális pontok egy operációs rendszeren belül, ahol a hálózati kapcsolatok kezdődnek és véget érnek.</p>
