--- a/index8.html
+++ b/index8.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
+    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">3 Fázisu kézfogás.</h2>
             <p>A 3 fázisú kézfogás, más néven TCP kézfogás, egy hálózati kommunikációs folyamat, amelyet a TCP/IP protokoll használ a kapcsolat létrehozására a kliens és a szerver között, mielőtt az adatátvitel megkezdődne.</p>
