--- a/index9.html
+++ b/index9.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
+    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">Adatfolyam vezérlés szerepe.</h2>
             <p>Az adatfolyam-vezérlés, más néven flow control, kulcsfontosságú szerepet játszik a hálózati kommunikációban. Az adatfolyam-vezérlés célja, hogy megakadályozza a küldőt abban, hogy túlterhelje a fogadót1234.</p>
