--- a/index10.html
+++ b/index10.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
+    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">Sorszámozás szerepe.</h2>
             <p>A sorszámozás, más néven szekvenciaszám, kulcsfontosságú szerepet játszik a hálózati kommunikációban, különösen a TCP/IP protokollban.</p>
