--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
+    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">A szegmens fogalma.</h2>
             <p class="mb-4">Az Ethernet hálózatokban, az IEEE 802.3 szabvány szerint, a szegmens a hálózati eszközök közötti elektromos kapcsolatot jelenti, amely egy közös közeg használatával történik. Egy szegmens tehát megfelelhet egyetlen koaxiális kábelnek és minden ahhoz csatlakoztatott eszköznek.</p>
