--- a/index7.html
+++ b/index7.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6">
+    <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">Kapcsolat felépítése és lebontása lépései.</h2>
             <p class="mb-4">A kapcsolat felépítése és lebontása a hálózati kommunikációban kulcsfontosságú lépések. A TCP (Transmission Control Protocol) protokollt használva, a következő lépések történnek:</p>
