ilyen olyan izé bigyo

--- a/index.html
+++ b/index.html
@@ -35,19 +35,51 @@
             <h2 class="text-2xl mb-4">Rétegek Protokolljai</h2>
             <p class="mb-3">Az alábbiakban ismertetem a rétegeket és azok protokolljait a Cisco oldalán található információk alapján:</p>
             <ul class="list-decimal list-outside ml-5">
-                <li class="mb-2"><b>Alkalmazás réteg:</b> Ez a réteg a hálózati szolgáltatásokhoz való hozzáférést kezeli. Protokollok: HTTP (Hypertext Transfer Protocol), FTP (File Transfer Protocol), SMTP (Simple Mail Transfer Protocol), stb.</li>
+                <li class="mb-2"><b>Alkalmazás réteg:</b> Ez a réteg a hálózati szolgáltatásokhoz való hozzáférést kezeli.
+                    <p class="mb-2">Protokollok:</p>
+                    <ul class="list-disc list-outside ml-5">
+                        <li class="mb-2">HTTP (Hypertext Transfer Protocol)</li>
+                        <li class="mb-2">FTP (File Transfer Protocol)</li>
+                        <li class="mb-2">SMTP (Simple Mail Transfer Protocol)</li>
+                    </ul>
+                </li>
                 
                 <li class="mb-2"><b>Bemutatási réteg:</b> Ez a réteg az adatok formázását és kódolását kezeli.</li>
 
                 <li class="mb-2"><b>Munkamenet réteg:</b> Ez a réteg a kommunikációs munkamenetek kezeléséért felelős.</li>
 
-                <li class="mb-2"><b>Szállítási réteg:</b> Ez a réteg a hálózati kommunikáció megbízhatóságát és integritását kezeli. Protokollok: TCP (Transmission Control Protocol), UDP (User Datagram Protocol), stb.</li>
+                <li class="mb-2"><b>Szállítási réteg:</b> Ez a réteg a hálózati kommunikáció megbízhatóságát és integritását kezeli. 
+                    <p class="mb-2">Protokollok:</p>
+                    <ul class="list-disc list-outside ml-5">
+                        <li class="mb-2">TCP (Transmission Control Protocol)</li>
+                        <li class="mb-2">UDP (User Datagram Protocol)</li>
+                    </ul>
+                </li>
 
-                <li class="mb-2"><b>Hálózati réteg:</b> Ez a réteg az adatok útvonalválasztását és továbbítását kezeli a hálózaton. Protokollok: IP (Internet Protocol), ICMP (Internet Control Message Protocol), stb.</li>
+                <li class="mb-2"><b>Hálózati réteg:</b> Ez a réteg az adatok útvonalválasztását és továbbítását kezeli a hálózaton. 
+                    <p class="mb-2">Protokollok:</p>
+                    <ul class="list-disc list-outside ml-5">
+                        <li class="mb-2">IP (Internet Protocol)</li>
+                        <li class="mb-2">ICMP (Internet Control Message Protocol)</li>
+                    </ul>
+                </li>
 
-                <li class="mb-2"><b>Adatkapcsolati réteg:</b> Ez a réteg a hálózati eszközök közötti kommunikációt kezeli. Protokollok: Ethernet (IEEE 802.3), Wi-Fi (IEEE 802.11), stb.</li>
+                <li class="mb-2"><b>Adatkapcsolati réteg:</b> Ez a réteg a hálózati eszközök közötti kommunikációt kezeli. 
+                    <p class="mb-2">Protokollok:</p>
+                    <ul class="list-disc list-outside ml-5">
+                        <li class="mb-2">Ethernet (IEEE 802.3)</li>
+                        <li class="mb-2">Wi-Fi (IEEE 802.11)</li>
+                    </ul>
+                </li>
                 
-                <li class="mb-2"><b>Fizikai réteg:</b> Ez a réteg a bitáramlásokat kezeli a hálózati eszközök között. Protokollok: Ethernet, USB, Bluetooth, stb.</li>
+                <li class="mb-2"><b>Fizikai réteg:</b> Ez a réteg a bitáramlásokat kezeli a hálózati eszközök között. 
+                    <p class="mb-2">Protokollok:</p>
+                    <ul class="list-disc list-outside ml-5">
+                        <li class="mb-2">Ethernet</li>
+                        <li class="mb-2">USB</li>
+                        <li class="mb-2">Bluetooth</li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </main>
