--- a/index9.html
+++ b/index9.html
@@ -33,18 +33,18 @@
     <main class="bg-blue-800/60 shadow-xl rounded-xl max-w-4xl mx-auto mt-10 p-6 text-balance">
         <div>
             <h2 class="text-2xl mb-4">Adatfolyam vezérlés szerepe.</h2>
-            <p>Az adatfolyam-vezérlés, más néven flow control, kulcsfontosságú szerepet játszik a hálózati kommunikációban. Az adatfolyam-vezérlés célja, hogy megakadályozza a küldőt abban, hogy túlterhelje a fogadót1234.</p>
+            <p>Az adatfolyam-vezérlés, más néven flow control, kulcsfontosságú szerepet játszik a hálózati kommunikációban. Az adatfolyam-vezérlés célja, hogy megakadályozza a küldőt abban, hogy túlterhelje a fogadót.</p>
 
             <p class="mt-4 mb-2 text-lg font-bold">Íme néhány kulcsfontosságú szerepe:</p>
 
             <ul class="list-disc list-outside ml-5">
-                <li class="mb-2">Megakadályozza az adattúlterhelést: Az adatfolyam-vezérlés megakadályozza, hogy a küldő olyan gyorsan küldjön adatokat, hogy a fogadó nem tudja feldolgozni őket1234.</li>
+                <li class="mb-2">Megakadályozza az adattúlterhelést: Az adatfolyam-vezérlés megakadályozza, hogy a küldő olyan gyorsan küldjön adatokat, hogy a fogadó nem tudja feldolgozni őket.</li>
 
-                <li class="mb-2">Szabályozza az adatátvitelt: Az adatfolyam-vezérlés szabályozza a küldő által küldött adatok mennyiségét, mielőtt várna a fogadótól érkező visszaigazolásra1.</li>
+                <li class="mb-2">Szabályozza az adatátvitelt: Az adatfolyam-vezérlés szabályozza a küldő által küldött adatok mennyiségét, mielőtt várna a fogadótól érkező visszaigazolásra.</li>
 
-                <li class="mb-2">Megakadályozza a hálózati torlódást: Ha a fogadó túlterhelt, akkor eldobhatja a csomagokat és kérheti a csomagok újraküldését, ami növeli a hálózati torlódást és csökkenti a rendszer teljesítményét3.</li>
+                <li class="mb-2">Megakadályozza a hálózati torlódást: Ha a fogadó túlterhelt, akkor eldobhatja a csomagokat és kérheti a csomagok újraküldését, ami növeli a hálózati torlódást és csökkenti a rendszer teljesítményét.</li>
 
-                <li class="mb-2">Sebesség illesztése: Az adatfolyam-vezérlés lehetővé teszi, hogy két állomás, amelyek különböző sebességgel dolgoznak és feldolgoznak, kommunikálhassanak egymással1.</li>
+                <li class="mb-2">Sebesség illesztése: Az adatfolyam-vezérlés lehetővé teszi, hogy két állomás, amelyek különböző sebességgel dolgoznak és feldolgoznak, kommunikálhassanak egymással.</li>
             </ul>
 
             <p class="mt-4">Az adatfolyam-vezérlés tehát létfontosságú a hálózati kommunikációban, mivel segít a hálózati erőforrások hatékony kezelésében és a hálózati teljesítmény optimalizálásában1234. Remélem, ez segített megérteni az adatfolyam-vezérlés szerepét.</p>
