--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li class="mb-2"><b>Alkalmazás réteg:</b> Ez a réteg a hálózati szolgáltatásokhoz való hozzáférést kezeli.
                     <p class="mb-2">Protokollok:</p>
                     <ul class="list-disc list-outside ml-5">
-                        <li class="mb-2"> <a href="/http.html">HTTP</a> (Hypertext Transfer Protocol)</li>
+                        <li class="mb-2"> <a class="font-bold hover:underline" href="/http.html">HTTP (Hypertext Transfer Protocol)</a></li>
                         <li class="mb-2">FTP (File Transfer Protocol)</li>
                         <li class="mb-2">SMTP (Simple Mail Transfer Protocol)</li>
                     </ul>
