--- a/http.html
+++ b/http.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div>
-            <h2 class="text-2xl font-bold mb-6">HTTP <> HTTPS</h2>
+            <h2 class="text-2xl font-bold mt-6 mb-6">HTTP <> HTTPS</h2>
             <div class="flex text-pretty">
                 <div class="">
                     <p class="font-bold mb-2">HTTP:</p>
