--- a/mail.html
+++ b/mail.html
@@ -10,7 +10,7 @@
     <header class="p-5 bg-gray-900 shadow-xl">
         <div class="flex">
             <div class="flex-none">
-                <h2 class="bg-blue-900 shadow-lg text-2xl rounded-md p-2 my-auto">Osi Modell</h2>
+                <h2 class="bg-blue-900 shadow-lg text-2xl rounded-md p-2 my-auto">E-mail</h2>
             </div>
             <div class="flex-auto">
                 <nav class="float-right">
