--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <ul class="list-disc list-outside ml-5">
                         <li class="mb-2"> <a class="font-bold hover:underline" href="/http.html">HTTP (Hypertext Transfer Protocol)</a></li>
                         <li class="mb-2">FTP (File Transfer Protocol)</li>
-                        <li class="mb-2">SMTP (Simple Mail Transfer Protocol)</li>
+                        <li class="mb-2"><a class="font-bold hover:underline" href="/mail.html">SMTP (Simple Mail Transfer Protocol)</a></li>
                     </ul>
                 </li>
                 
