--- a/http.html
+++ b/http.html
@@ -63,9 +63,9 @@
                     <li class="mb-2">Az HTTPS használatakor az internetes szolgáltatók (ISP-k) vagy más közvetítők nem tudnak tartalmat injektálni a weboldalakba a weboldal tulajdonosának jóváhagyása nélkül.</li>
                 </ul>
             </div>
-            <div class="my-auto ">
+            <div class="my-auto ml-4">
                 <div class="">
-                    <img class="rounded-xl" src="https://media.discordapp.net/attachments/1205431235564797992/1232287851094212608/night_gaming_by_locolobo333_dgfzugo-pre.jpg?ex=6628e8fe&is=6627977e&hm=47efee5abcb65ddb4f64b170f9cd1b13e2c9251a96fe91056037b15bba819d09&=&format=webp&width=469&height=469" alt="">
+                    <img class="rounded-xl" src="https://media.discordapp.net/attachments/1205431235564797992/1232287851413114942/oh__my_friends_are_on__by_locolobo333_dgfzuh2-pre.jpg?ex=663617fe&is=6634c67e&hm=0b200892858a44aab035edbeff3720e2184640cb673c44c1599556a8d4c76d52&=&format=webp&width=671&height=671" alt="">
                 </div>
             </div>
         </div>
